Recompiled with authors

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ sloan-privacy-bibliography.log
 sloan-privacy-bibliography.out
 sloan-privacy-bibliography.run.xml
 
+sloan-privacy-bibliography.synctex.gz
