starting edits on library.bib to address iss4, iss5, iss6, iss7

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ sloan-privacy-bibliography.out
 sloan-privacy-bibliography.run.xml
 
 sloan-privacy-bibliography.synctex.gz
+library.bib.bak
+library.bib.sav
