--- a/_output.yml
+++ b/_output.yml
@@ -15,7 +15,7 @@ bookdown::gitbook:
       scroll_highlight: yes
       before: null
       after: |
-              <li class="chapter">©️ 2019 Abowd, Schmutte, Vilhuber</li>
+              <li class="chapter">©️ 2019 Abowd, Schmutte, Sexton, Vilhuber</li>
               <li class="chapter"><a href="https://creativecommons.org/licenses/by-nc/4.0/" alt="Link to CC BY-NC 4.0" target="_blank">
               <img alt="License: CC BY-NC 4.0" src="https://licensebuttons.net/l/by-nc/4.0/80x15.png" /></a></li>
               <li class="chapter"><i class="fa fa-file-pdf"><a href="privacybibliography.pdf">Download!</a></li>
