--- a/_output.yml
+++ b/_output.yml
@@ -1,10 +1,14 @@
+citation_package: natbib
+biblio-style: "authoryear"
 bookdown::gitbook:
   split_by: chapter
   split_bib: TRUE
   toc_depth: 1
   highlight: tango
   config:
-    download: null
+    download: 
+      - ["Introductory_Readings_Privacy_Economists.pdf", "PDF"]
+      - ["sloan-privacy-bibliography.pdf", "Extensive PDF"]
     edit:
         link: https://github.com/labordynamicsinstitute/privacy-bibliography/edit/master/%s
     sharing:
@@ -18,10 +22,11 @@ bookdown::gitbook:
               <li class="chapter">©️ 2019 Abowd, Schmutte, Sexton, Vilhuber</li>
               <li class="chapter"><a href="https://creativecommons.org/licenses/by-nc/4.0/" alt="Link to CC BY-NC 4.0" target="_blank">
               <img alt="License: CC BY-NC 4.0" src="https://licensebuttons.net/l/by-nc/4.0/80x15.png" /></a></li>
-              <li class="chapter"><i class="fa fa-file-pdf"><a href="privacybibliography.pdf">Download!</a></li>
     toolbar:
       position: fixed
 bookdown::pdf_book:
   keep_tex: yes
   includes:
       in_header: preamble.tex
+  toc_depth: 1
+  
