Remving and preventing the dynamically generated file

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
-sloan-privacy-bibliography.aux
-sloan-privacy-bibliography.bbl
-sloan-privacy-bibliography.bcf
-sloan-privacy-bibliography.blg
-sloan-privacy-bibliography.log
-sloan-privacy-bibliography.out
-sloan-privacy-bibliography.run.xml
-
-sloan-privacy-bibliography.synctex.gz
-library.bib.bak
-library.bib.sav
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.log
+*.out
+*.run.xml
+*.synctex.gz
+*.bak
+*.sav
 __latexindent_temp.tex
 .Rproj.user
 .Rhistory
@@ -18,6 +17,4 @@ _book
 _bookdown_files
 rsconnect
 _main.html
-library.bib.sav
-primary.bib.sav
 .DS_Store
